2009-02-03  Eric Roman  <eroman@chromium.org>

        Reviewed by Holger Freyther.

        Fix FrameChromium.cpp following r40473 which moved Frame::adjustPageHeight to FrameView::adjustPageHeight.

        * page/chromium/FrameChromium.cpp:
        (WebCore::computePageRectsForFrame):

2009-02-02  Simon Fraser  <simon.fraser@apple.com>

        Reviewed by Dave Hyatt

        https://bugs.webkit.org/show_bug.cgi?id=23358

        Hook accelerated compositing into RenderLayer.

        * rendering/RenderLayer.cpp:
        (WebCore::RenderLayer::RenderLayer):
        (WebCore::RenderLayer::~RenderLayer):
        Init and clean up backing and the hasCompositingDescendant bit.
        
        (WebCore::RenderLayer::compositor):
        Shortcut to get to the RenderLayerCompositor.

        (WebCore::RenderLayer::updateLayerPositions):
        We need to let full repaints propagate to all compositing layers, and 
        update the backing after layout here.
        
        (WebCore::RenderLayer::transparentAncestor):
        (WebCore::transparencyClipBox):
        (WebCore::RenderLayer::beginTransparencyLayers):
        Account for the fact that opacity may be rendered via the compositing
        layer sometimes.
        
        (WebCore::RenderLayer::addChild):
        (WebCore::RenderLayer::removeChild):
        (WebCore::RenderLayer::removeOnlyThisLayer):
        Tell the compositor when the RenderLayer hierarchy changes.
        
        (WebCore::RenderLayer::scrollToOffset):
        Update layer geometry after scrolling.
        
        (WebCore::RenderLayer::paintLayer):
        We short-circuit painting on composited layers, because these layers
        are painted on a callback from the compositing system.
        
        (WebCore::RenderLayer::hitTestLayer):
        Only apply transforms if we are rendering them in software.
        
        (WebCore::RenderLayer::localBoundingBox):
        (WebCore::RenderLayer::boundingBox):